# Minishell

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  builtins.c  child_bonus.c  cmd_bonus.c  errors_free_bonus.c  heredoc_bonus.c  in  infile  input_op.c  main.c  minishell  notes.txt  out  out1  out2  output_op.c  paths_bonus.c  pipex_bonus.c  pipex_bonus.h  scraps.txt  start.c  stdin_bonus.c  test  test.sh  testMakefile  tmp_file  utils_bonus.c
Lib42/: Makefile
Lib42/ft_printf/: ft_pointer.c  ft_print_char_string.c  ft_printf.c  ft_putnbr_base.c  ft_putnbr_ulong.c
Lib42/get_next_line/: get_next_line.c  get_next_line_b_exit.c  get_next_line_b_utils.c  get_next_line_exit.c  get_next_line_utils.c
Lib42/include/: ft_printf.h  get_next_line.h  libft.h
Lib42/libft/: ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_charjoin.c  ft_error.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  (+5 more)
include/: I_want_to_break_free.h  arg_list_actions.h  builtins.h  cmd_list_actions.h  env_var.h  envp_parser.h  errors.h  exec.h  lexical_analyzer.h  minishell.h  parser.h  pipes.h  token_list_actions.h  tolken_list_actions.h  utils.h
src/: main.c
src/Parsing/: parsing.c
src/arg_list_actions/: add_arg_node.c  add_new_node.c
src/builtins/: builtin_cd.c  builtin_echo.c  builtin_env.c  builtin_exit.c  builtin_export.c  builtin_export2.c  builtin_export3.c  builtin_pwd.c  builtin_unset.c  builtins.c
src/env_variables /: env_var.c
src/exec/: builtins.c  child.c  dollarsign.c  dollarsign2.c  errors.c  fork.c  fork2.c  input_op.c  output_op.c  path.c  pipes.c  start.c  utils.c  utils2.c
src/exec_pipes/: child.c  child_bonus.c  cmd.c  errors_free.c  errors_free_bonus.c  heredoc.c  path.c  pipex.c  stdin.c  utils.c  utils_bonus.c
src/lexical_analyser/: char_machine.c  error_machine.c  lexe.c  meta_machine.c  quotes_machine.c  space_newline.c
src/parsing/: char_machine.c  env_var.c  meta_machine.c  parser.c  parsing.c
src/parsing/env_variables /: env_var.c
src/parsing/parse/: check_comands.c  check_commands.c  check_commands2.c  here_ult.c  heredoc.c  quotes.c
src/parsing/state_machine/: char_machine.c  error_machine.c  lexe.c  meta_machine.c  space_machine.c  space_newline.c
src/tolken_list_actions/: add_tolken.c  print_tolkens.c
src/utils/I_want_to_break_free/: pareser_free.c  parser_free.c  parser_free_array.c
src/utils/arg_list_actions/: add_arg_node.c
src/utils/cmd_list_actions/: add_cmd_node.c  add_inout_node.c  print_cmd.c
src/utils/envp_parser/: parse_array_envp.c  parse_list_envp.c
src/utils/errors/: 1.c  127.c  1_b.c  255.c  258.c
src/utils/history/: history.c
src/utils/signal_handlers/: signal_handlers.c  signal_handlers2.c
src/utils/token_list_actions/: add_token.c  print_tokens.c  search_token.c
src/utils/tolken_list_actions/: add_tolken.c  print_tolkens.c  search_token.c
test_folder/: out.txt  out3  out4
